--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sass": "~1.44.0",
     "sass-loader": "^12.4.0",
     "typescript": "~4.7.4",
+    "vditor": "^3.8.17",
     "vite": "~2.7.13",
     "vite-plugin-dts": "^1.4.1",
     "vue": "~3.2.29",
