--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crco",
   "author": "seepine",
   "license": "MIT",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "collect arco",
   "main": "./dist/index.umd.js",
   "module": "./dist/index.js",
@@ -27,10 +27,11 @@
     "*.{vue,js,ts}": "eslint --fix"
   },
   "devDependencies": {
-    "@arco-design/web-vue": "~2.34.0",
+    "@arco-design/web-vue": "~2.39.0",
     "@commitlint/cli": "~13.2.1",
     "@commitlint/config-conventional": "~13.2.0",
     "@types/element-resize-detector": "^1.1.3",
+    "@types/lodash": "^4.14.186",
     "@types/node": "~16.11.11",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
@@ -53,17 +54,18 @@
     "sass": "~1.44.0",
     "sass-loader": "^12.4.0",
     "typescript": "~4.7.4",
-    "vditor": "^3.8.17",
+    "vditor": "^3.8.18",
     "vite": "~2.7.13",
-    "vite-plugin-dts": "^1.4.1",
+    "vite-plugin-dts": "~1.4.1",
     "vue": "~3.2.29",
     "vue-tsc": "~0.38.1",
     "vuepress": "2.0.0-beta.35",
-    "vuepress-plugin-demo-block-vue3": "1.0.2"
+    "vuepress-plugin-demo-block-vue3": "1.0.2",
+    "webpack": "^5.0.0"
   },
   "peerDependencies": {
-    "@arco-design/web-vue": "~2.34.0",
-    "axios": "~0.24.0"
+    "@arco-design/web-vue": "^2.34.0",
+    "axios": "^0.21.0"
   },
   "config": {
     "commitizen": {
@@ -72,6 +74,6 @@
   },
   "dependencies": {
     "element-resize-detector": "^1.2.4",
-    "mitt": "^3.0.0"
+    "lodash": "^4.17.21"
   }
 }
