--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,19 @@
-* text eol=lf
+* text=auto
+
+# Force the following filetypes to have unix eols, so Windows does not break them
+*.* text eol=lf
+
+# Separate configuration for files without suffix
+LICENSE text eol=lf
+
+# These files are binary and should be left untouched
+# (binary is a macro for -text -diff)
+*.png binary
+*.pdf binary
+*.doc binary
+*.docx binary
+*.ppt binary
+*.pptx binary
+*.xls binary
+*.xlsx binary
+*.exe binary
