feat(table): add change column btn

--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "webpack": "^5.0.0"
   },
   "dependencies": {
-    "element-resize-detector": "^1.2.4"
+    "element-resize-detector": "^1.2.4",
+    "swapy": "^1.0.5"
   },
   "peerDependencies": {
     "@arco-design/web-vue": ">=2.39.2",
